--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=5.6.4",
     "laravel/framework": "5.3.*",
     "barryvdh/laravel-debugbar": "^2.3",
-    "filp/whoops": "^2.1"
+    "filp/whoops": "^2.1",
+    "intervention/image": "^2.3"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
